force-app/main/default/objects/PricebookEntry/fields/InternalCost__c.field-meta.xml
<CustomField>
    <fullName>InternalCost__c</fullName>
    <label>Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>