force-app/main/default/objects/PricebookEntry/fields/OvernightAllowance__c.field-meta.xml
<CustomField>
    <fullName>OvernightAllowance__c</fullName>
    <label>Overnight Allowance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>