force-app/main/default/objects/PricebookEntry/fields/TravelAllowance__c.field-meta.xml
<CustomField>
    <fullName>TravelAllowance__c</fullName>
    <label>Travel Allowance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>